QmlModels: Create dynamic properties on the fly when initializing

When the dynamic meta object is requested we need to verify that all
properties are available. Otherwise we can't look them up.

Fixes: QTBUG-108261
Change-Id: I97101b8902250bf6edd0db12efc45cfa81a9cc54
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>